helm/examples/spendapp/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: spendapp
  namespace: default
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - spendapp.sergiocltn.com
      secretName: spendapp-sergiocltn-com-tls
  rules:
    - host: spendapp.sergiocltn.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: spendapp
                port:
                  number: 80
